--- a/paa_animate.css
+++ b/paa_animate.css
@@ -42,6 +42,7 @@ nav#gameLinks a::after {
     background: linear-gradient(to right, rgb(237, 243, 71), rgb(188, 74, 0));
     border-radius: 4px;
     opacity: 0;
+    transition: width .5s, opacity .5s;
 }
 
 nav#gameLinks a:hover::after {
@@ -50,8 +51,32 @@ nav#gameLinks a:hover::after {
 }
 
 /* Sprite Styles */
+div.sprite {
+    position: absolute;
+}
 
+div#bat {
+    width: 40px;
+    height: 50px;
+    top: 100px;
+    left: -50px;
+    background: url('paa_bat.png') no-repeat cover left center;
+}
 
+div#butterfly {
+    width: 35px;
+    height: 35px;
+    top: 60px;
+    left: -50px;
+    background: url('paa_bfly.png') no-repeat cover left center;
+}
 
+div#fox {
+    width: 280px;
+    height: 260px;
+    bottom: 10px;
+    right: 10px;
+    background: url('paa_fox.png') no-repeat cover left center;
+}
 
 /* Animation Styles */
