--- a/paa_animate.css
+++ b/paa_animate.css
@@ -51,32 +51,79 @@ nav#gameLinks a:hover::after {
 }
 
 /* Sprite Styles */
+/* This sets the sprites postion type */
 div.sprite {
     position: absolute;
 }
 
+/* THis is the size, starting positon, animations applied, and image styles for the bat sprite */
 div#bat {
     width: 40px;
     height: 50px;
     top: 100px;
     left: -50px;
-    background: url('paa_bat.png') no-repeat cover left center;
+    background-image: url('paa_bat.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: left center;
+    animation: playSprite steps(39) 2s infinite, flyRight 8s linear infinite;
 }
 
+/* This is the size, starting positon, animations applied, and image styles for the butterfly sprite */
 div#butterfly {
     width: 35px;
     height: 35px;
     top: 60px;
     left: -50px;
-    background: url('paa_bfly.png') no-repeat cover left center;
+    background-image: url('paa_bfly.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: left center;
+    animation: playSprite steps(33) 1s 3s infinite, flyRight 6s cubic-bezier(0, 1, 0.73, 0) infinite;
+
 }
 
+/* This is the size, starting positon, animations applied, and image styles for the fox sprite */
 div#fox {
     width: 280px;
     height: 260px;
     bottom: 10px;
     right: 10px;
-    background: url('paa_fox.png') no-repeat cover left center;
+    background-image: url('paa_fox.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: left center;
+    animation: playSprite steps(27) 3.5s 4s infinite;
 }
 
 /* Animation Styles */
+/* This is the anitamntion that lets the sprites seem to move  */
+@keyframes playSprite {
+    100% {
+        background-position: right center;
+    }
+}
+
+/* THis is the animation that moves the butterfly and the bat accross the screen */
+@keyframes flyRight {
+    25% {
+        top: 150px;
+    }
+
+    50% {
+        top: 55px;
+    }
+
+    65% {
+        top: 120px;
+    }
+
+    90% {
+        top: 50px;
+    }
+
+    100% {
+        top: 80px;
+        left: 100%;
+    }
+}
